--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Welcome to Hannah's Homepage!
+description: This page will be regularly updated with personal and academic projects.
