--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
-title: Welcome to Hannah's Homepage!
+title: Hannah's Homepage
 description: This page will be regularly updated with personal and academic projects.
