--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-dinky
 title: Hannah's Homepage
 description: This page will be regularly updated with personal and academic projects.
